--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -81,3 +81,12 @@ a {
   padding: 0 2rem;
 }
 
+.img-fluid {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-gallery);
+}
