Add supports to sendgrid

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,6 +35,8 @@
   --blue-300: 63, 120, 163;
   --teal: 35, 150, 139;
 
+  --danger: 177, 32, 93;
+
   --spacing-1: 1rem;
   --spacing-2: 2rem;
   --spacing-3: 3rem;
