--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -92,3 +92,19 @@ a {
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-gallery);
 }
+
+p {
+  color: rgb(var(--primary-200));
+  font-family: var(--font-geomanist);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.5em;
+  margin-bottom: 1.5rem;
+}
+
+@media only screen and (max-width: 1001px) {
+  html {
+      font-size: 14px;
+  }
+}
